--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../src/assets/"Moonlit Asteroid.jpg");
+    background-image: url(../src/assets/Moonlit.jpg);
     background-size: cover;
     padding: 10px;
 }
